crates/biome_cli/tests/snapshots/main_cases_tailwind/should_apply_tailwind_shorthand_fixes_in_svelte.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "experimentalFullSupportEnabled": true,
    "linter": {
      "enabled": true
    }
  },
  "linter": {
    "rules": {
      "recommended": false,
      "nursery": {
        "useTailwindShorthandClasses": "error"
      }
    }
  }
}
```

## `file.svelte`

```svelte
<div class={clsx("mx-2")}></div>\n
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
